[package]
name = "vorst"
version = "0.0.1"
authors = [
    "Martin Junghanns <nerdfaktor42@mailbox.org>",
    "Paul Horn <opensource@developer.knutwalker.engineer>"
]
description = "Visualizing sorting algorithms on the console"
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.19.0"
itertools = "0.10.0"
rand = "0.8.3"
tui = { version = "0.14", default-features = false, features = ['crossterm'] }